@@ -1,24 +1,28 @@
 package kpi.zakrevskyi.neurolib.security;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import kpi.zakrevskyi.neurolib.domain.entity.Role;
 import kpi.zakrevskyi.neurolib.domain.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 public class MyUserDetails implements UserDetails {
 
     private final String email;
     private final String passwordHash;
+    private final Role role;
 
     public MyUserDetails(User user) {
         this.email = user.getEmail();
         this.passwordHash = user.getPasswordHash();
+        this.role = user.getRole() == null ? Role.USER : user.getRole();
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
